# fibonacci

./: CMakeLists.txt
include/: fib.h
src/: fib.c  fib.cpp
unittests/: CMakeLists.txt  prj.conf  testcase.yaml
unittests/src/: main.c  main.cpp
